# view-league-backend

./: .dockerignore  .project  Cargo.toml  Dockerfile  dev.http
src/: configuration.rs  main.rs  types.rs
src/lib/: matches.rs  summoner.rs
src/routes/: champion.rs  matches.rs  mod.rs  summoner.rs
src/services/: champions.rs  matches.rs  mod.rs  summoner.rs
