[package]
name = "view-league-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
envy = "0.4.2"
reqwest = {version ="0.11.12", features = ["async-compression"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = {version ="1.21.2", features = ["full"] }
